--- a/17-particles-animation/index.html
+++ b/17-particles-animation/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>闹鬼小屋</title>
+  <title>粒子动画</title>
 </head>
 <body>
   <canvas class="webgl"></canvas>
