--- a/20-scroll-based-animation/index.html
+++ b/20-scroll-based-animation/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
   <canvas class="webgl"></canvas>
+  
+  <div id="loading" style="width: 100vw;height: 100vh;display:flex;justify-content:center;align-items:center; position: fixed; top: 0;left: 0;background-color: #263238;transition: opacity 280ms ease; color: #fff;">loading...</div>
+
   <div class="permissionDialog" id="permissionDialog" style="visibility: hidden">
     <div class="title">
       Request permission of motion for better animation effect
